--- a/VNA/Base.lproj/Main.storyboard
+++ b/VNA/Base.lproj/Main.storyboard
@@ -144,13 +144,13 @@
                                                     <rect key="frame" x="8" y="8" width="343" height="47"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FAVOURITE BEVEGATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EkV-F7-eRf">
-                                                            <rect key="frame" x="8" y="15" width="158.5" height="18"/>
+                                                            <rect key="frame" x="8" y="14" width="158.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" translatesAutoresizingMaskIntoConstraints="NO" id="d9J-Nh-SiO">
-                                                            <rect key="frame" x="310" y="11" width="25" height="25"/>
+                                                            <rect key="frame" x="310" y="10.5" width="25" height="25"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="25" id="WDK-me-Jne"/>
                                                                 <constraint firstAttribute="height" constant="25" id="oCH-eJ-kee"/>
@@ -481,10 +481,10 @@
                                                     </constraints>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xz0-Dh-UIe">
-                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9V-7e-0uJ">
-                                                            <rect key="frame" x="8" y="9.5" width="25" height="25"/>
+                                                            <rect key="frame" x="8" y="9" width="25" height="25"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="25" id="PUd-a4-uLi"/>
                                                                 <constraint firstAttribute="width" constant="25" id="zqj-HW-VQI"/>
@@ -492,7 +492,7 @@
                                                             <state key="normal" image="unchecked_checkbox"/>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaX-lG-pza">
-                                                            <rect key="frame" x="49" y="11.5" width="42" height="21"/>
+                                                            <rect key="frame" x="49" y="11" width="42" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.20000000000000001" green="0.20392156859999999" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -552,6 +552,6 @@
         <image name="unchecked_checkbox" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EDb-QR-WYz"/>
+        <segue reference="r4H-Em-V2h"/>
     </inferredMetricsTieBreakers>
 </document>
